--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>共有カレンダー Portal Final</title>
+  <title>共有カレンダー Portal Final Rev2</title>
   <style>
     :root { --main: #007bff; --admin: #dc3545; --bg: #f8f9fa; --today: #e7f3ff; --accent: #ff9f43; --success: #28a745; --selected: #007bff; }
     body { font-family: sans-serif; background: var(--bg); margin: 0; padding: 0; text-align: center; color: #333; padding-bottom: 50px; }
@@ -14,7 +14,6 @@
     .btn-danger { background: var(--admin); color: white; border: none; font-size: 11px; padding: 4px 8px; width: auto; border-radius: 5px; cursor:pointer; }
     .hidden { display: none !important; }
     
-    /* 共通UI */
     .nav-bar { display: flex; justify-content: space-around; background: white; padding: 10px 0; position: sticky; top: 0; z-index: 100; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
     .nav-item { font-size: 12px; cursor: pointer; color: #666; font-weight: bold; flex: 1; }
     .nav-active { color: var(--main); border-bottom: 2px solid var(--main); }
@@ -41,10 +40,10 @@
       <p id="sync-notice" style="font-size:12px; color:var(--accent);" class="hidden">※現在の団体をあなたのアカウントに登録します</p>
       <div style="display:flex; gap:5px;">
         <input type="text" id="user-acc-name" placeholder="お名前">
-        <button onclick="suggestName()" style="width:50px; background:#eee;">✨</button>
+        <button onclick="suggestName()" style="width:50px; background:#eee; border-radius:10px; border:1px solid #ddd;">✨</button>
       </div>
       <input type="password" id="user-acc-pass" placeholder="パスワード">
-      <button class="btn-submit" id="auth-main-btn" onclick="userLoginAction()">ログイン / アカウント作成</button>
+      <button class="btn-submit" onclick="userLoginAction()">ログイン / アカウント作成</button>
     </div>
     <button onclick="goBackFromUserAuth()">戻る</button>
   </div>
@@ -57,12 +56,17 @@
     </div>
     <h3 id="portal-user-name" style="margin:15px 0 5px;"></h3>
     <div id="total-task-list"></div>
-    <button onclick="location.reload()" style="color:red; background:none; border:none; margin-top:30px;">ログアウト</button>
+    <button onclick="location.reload()" style="color:red; background:none; border:none; margin-top:30px; text-decoration:underline;">ログアウト</button>
   </div>
 
   <div id="view-calendar" class="hidden">
-    <h3 id="group-title"></h3>
-    <div id="user-status-bar" style="font-size:11px; margin-bottom:5px;"></div>
+    <h3 id="group-title" style="margin-bottom:5px;"></h3>
+    <div id="admin-indicator" class="hidden" style="margin-bottom:10px;">
+        <span style="color:red; font-size:12px; font-weight:bold;">【管理者モード】</span>
+        <button onclick="openAdminSettings()" style="width:auto; padding:5px 10px; font-size:12px; background:#444; color:white; border-radius:5px; border:none;">⚙️ 団体設定</button>
+    </div>
+    <div id="user-status-bar" style="font-size:11px; margin-bottom:5px; color:#666;"></div>
+    
     <div class="card">
         <div id="cal-grid" class="cal-grid"></div>
     </div>
@@ -75,28 +79,48 @@
     <button onclick="goBackFromCalendar()" class="btn-outline">戻る</button>
   </div>
 
+  <div id="view-admin-settings" class="hidden">
+    <h3>⚙️ 団体管理 (管理者専用)</h3>
+    <div class="card">
+      <h4>🔐 団体パスワード変更</h4>
+      <label style="font-size:12px; display:block; text-align:left;">メンバー用PW:</label>
+      <input type="text" id="edit-gpass">
+      <label style="font-size:12px; display:block; text-align:left;">管理者用PW:</label>
+      <input type="text" id="edit-opass">
+      <button class="btn-submit" onclick="updateGroupPasswords()">団体PWを更新</button>
+    </div>
+    <div class="card">
+      <h4>👤 所属ユーザーの管理</h4>
+      <div id="admin-user-list" style="text-align:left; font-size:13px;"></div>
+    </div>
+    <div class="card" style="border:1px solid red; margin-top:20px;">
+      <h4 style="color:red;">団体の消去</h4>
+      <button class="btn-danger" style="width:100%; padding:10px;" onclick="deleteGroup()">この団体を完全に削除</button>
+    </div>
+    <button onclick="showView('view-calendar')">戻る</button>
+  </div>
+
   <div id="view-my-page" class="hidden">
-    <h3>👤 アカウント設定</h3>
+    <h3>👤 個人アカウント設定</h3>
     <div class="card">
       <h4>パスワード変更</h4>
       <input type="text" id="new-user-pass" placeholder="新しいPW">
-      <button class="btn-submit" onclick="changeMyPassword()">変更</button>
+      <button class="btn-submit" onclick="changeMyPassword()">変更を保存</button>
     </div>
     <div class="card" style="text-align:left;">
-      <h4>所属団体</h4>
+      <h4>所属中の団体</h4>
       <div id="my-groups-list"></div>
     </div>
     <div class="card" style="border:1px solid red; margin-top:30px;">
-      <h4 style="color:red;">アカウントの削除</h4>
-      <p style="font-size:11px;">※一度削除すると復元できません。</p>
+      <h4 style="color:red;">アカウント削除</h4>
       <button class="btn-danger" style="width:100%;" onclick="deleteMyAccount()">アカウントを完全に削除</button>
     </div>
     <button onclick="showView('view-portal')">戻る</button>
   </div>
 
-  <div id="view-start" class="hidden"><h3>団体ログイン</h3><div class="card"><input type="text" id="login-group-name" placeholder="団体名"><input type="password" id="login-group-pass" placeholder="PW"><button class="btn-submit" onclick="groupLoginAction(false)">入る</button></div><button onclick="showView('view-setup')">設立</button> | <button onclick="showView('view-admin-login')">管理者</button><br><button onclick="goBackFromGroupLogin()">戻る</button></div>
-  <div id="view-setup" class="hidden"><h3>団体設立</h3><div class="card"><input type="text" id="s-n" placeholder="団体名"><input type="password" id="s-g" placeholder="メPW"><input type="password" id="s-o" placeholder="管PW"><button class="btn-submit" onclick="createGroup()">設立</button></div><button onclick="showView('view-start')">戻る</button></div>
-  <div id="view-admin-login" class="hidden"><h3>管理者</h3><div class="card"><input type="text" id="al-n"><input type="password" id="al-p"><button class="btn-submit" onclick="groupLoginAction(true)">ログイン</button></div><button onclick="showView('view-start')">戻る</button></div>
+  <div id="view-start" class="hidden"><h3>団体ログイン</h3><div class="card"><input type="text" id="login-group-name" placeholder="団体名"><input type="password" id="login-group-pass" placeholder="PW"><button class="btn-submit" onclick="groupLoginAction(false)">メンバーとして入る</button></div><button onclick="showView('view-setup')" style="background:none; border:none; text-decoration:underline; color:var(--main);">新規団体設立</button> | <button onclick="showView('view-admin-login')" style="background:none; border:none; text-decoration:underline; color:var(--admin);">管理者ログイン</button><br><button onclick="goBackFromGroupLogin()" style="margin-top:20px;">戻る</button></div>
+  <div id="view-setup" class="hidden"><h3>団体設立</h3><div class="card"><input type="text" id="s-n" placeholder="団体名"><input type="password" id="s-g" placeholder="メPW"><input type="password" id="s-o" placeholder="管PW"><button class="btn-submit" onclick="createGroup()">設立して保存</button></div><button onclick="showView('view-start')">戻る</button></div>
+  <div id="view-admin-login" class="hidden"><h3>管理者ログイン</h3><div class="card"><input type="text" id="al-n" placeholder="団体名"><input type="password" id="al-p" placeholder="管理者PW"><button class="btn-submit" onclick="groupLoginAction(true)">ログイン</button></div><button onclick="showView('view-start')">戻る</button></div>
 
 <script>
   const BIN_ID = "6989dd4bae596e708f1d842e";
@@ -105,12 +129,15 @@
   let allData = { groups: {}, globalUsers: {} };
   let currentGroup = null;
   let currentUser = null;
+  let isAdminMode = false;
   let syncFlag = false;
 
   async function syncFromCloud() {
-    const res = await fetch(`https://api.jsonbin.io/v3/b/${BIN_ID}/latest`, { headers: { "X-Master-Key": API_KEY } });
-    const json = await res.json();
-    allData = json.record || { groups: {}, globalUsers: {} };
+    try {
+        const res = await fetch(`https://api.jsonbin.io/v3/b/${BIN_ID}/latest`, { headers: { "X-Master-Key": API_KEY } });
+        const json = await res.json();
+        allData = json.record || { groups: {}, globalUsers: {} };
+    } catch(e) { console.error("Cloud Error"); }
   }
 
   async function syncToCloud() {
@@ -121,16 +148,13 @@
     });
   }
 
-  // --- 名前提案ロジック ---
   function suggestName() {
     const adj = ["青い", "元気な", "のんびり", "光の", "空飛ぶ", "ミラクル"];
     const noun = ["リス", "スター", "カレンダー", "ライオン", "ノート", "ランナー"];
-    const num = Math.floor(Math.random() * 900) + 100;
-    const res = adj[Math.floor(Math.random()*adj.length)] + noun[Math.floor(Math.random()*noun.length)] + num;
+    const res = adj[Math.floor(Math.random()*adj.length)] + noun[Math.floor(Math.random()*noun.length)] + (Math.floor(Math.random()*900)+100);
     document.getElementById('user-acc-name').value = res;
   }
 
-  // --- バグ修正版：認証移行 ---
   function goToAuth(isSync) {
     syncFlag = isSync;
     document.getElementById('sync-notice').className = syncFlag ? "" : "hidden";
@@ -142,7 +166,6 @@
     const p = document.getElementById('user-acc-pass').value;
     if(!n || !p) return alert("入力して下さい");
     await syncFromCloud();
-
     if(!allData.globalUsers[n]) {
       if(confirm("アカウントを新規作成しますか？")) {
         allData.globalUsers[n] = { name: n, pass: p, joinedGroups: [] };
@@ -154,7 +177,7 @@
       if(!currentUser.joinedGroups.includes(currentGroup.name)) {
         currentUser.joinedGroups.push(currentGroup.name);
         if(!allData.groups[currentGroup.name].memberNames) allData.groups[currentGroup.name].memberNames = [];
-        allData.groups[currentGroup.name].memberNames.push(n);
+        if(!allData.groups[currentGroup.name].memberNames.includes(n)) allData.groups[currentGroup.name].memberNames.push(n);
       }
       syncFlag = false;
     }
@@ -163,40 +186,63 @@
     showView('view-portal');
   }
 
-  // --- アカウント削除 ---
-  async function deleteMyAccount() {
-    if(!confirm("本当にアカウントを削除しますか？全てのデータが消えます。")) return;
-    const name = currentUser.name;
+  async function groupLoginAction(isOp) {
+    const gn = isOp ? document.getElementById('al-n').value : document.getElementById('login-group-name').value;
+    const gp = isOp ? document.getElementById('al-p').value : document.getElementById('login-group-pass').value;
     await syncFromCloud();
-    // 全団体から名前を削除
-    Object.values(allData.groups).forEach(g => {
-      if(g.memberNames) g.memberNames = g.memberNames.filter(m => m !== name);
+    const g = allData.groups[gn];
+    if(g && (isOp ? g.oPass === gp : g.gPass === gp)) {
+      currentGroup = g;
+      isAdminMode = isOp;
+      if(currentUser && !currentUser.joinedGroups.includes(gn)) {
+        currentUser.joinedGroups.push(gn);
+        if(!g.memberNames) g.memberNames = [];
+        if(!g.memberNames.includes(currentUser.name)) g.memberNames.push(currentUser.name);
+        await syncToCloud();
+      }
+      renderCalendar(); 
+      showView('view-calendar');
+    } else alert("認証エラー");
+  }
+
+  function openAdminSettings() {
+    document.getElementById('edit-gpass').value = currentGroup.gPass;
+    document.getElementById('edit-opass').value = currentGroup.oPass;
+    const list = document.getElementById('admin-user-list');
+    list.innerHTML = "";
+    (currentGroup.memberNames || []).forEach(m => {
+        const u = allData.globalUsers[m];
+        if(!u) return;
+        list.innerHTML += `<div style="margin-bottom:8px;"><b>${m}</b>: PW[${u.pass}]</div>`;
     });
-    delete allData.globalUsers[name];
+    showView('view-admin-settings');
+  }
+
+  async function updateGroupPasswords() {
+    const gP = document.getElementById('edit-gpass').value;
+    const oP = document.getElementById('edit-opass').value;
+    await syncFromCloud();
+    allData.groups[currentGroup.name].gPass = gP;
+    allData.groups[currentGroup.name].oPass = oP;
     await syncToCloud();
-    alert("アカウントを削除しました。");
+    alert("団体パスワードを更新しました");
+  }
+
+  async function deleteGroup() {
+    if(!confirm("本当に団体を削除しますか？")) return;
+    await syncFromCloud();
+    delete allData.groups[currentGroup.name];
+    await syncToCloud();
     location.reload();
   }
 
-  // --- UI制御 ---
-  function goBackFromCalendar() {
-    if(currentUser) { renderPortal(); showView('view-portal'); } else { showView('view-init'); }
-  }
-  function goBackFromUserAuth() {
-    if(syncFlag) { showView('view-calendar'); } else { showView('view-init'); }
-  }
-  function goBackFromGroupLogin() {
-    if(currentUser) { renderPortal(); showView('view-portal'); } else { showView('view-init'); }
-  }
-
-  // --- 描画ロジック ---
   function renderCalendar() {
-    const gn = currentGroup.name;
-    document.getElementById('group-title').innerText = gn;
-    document.getElementById('user-status-bar').innerText = currentUser ? `👤 ${currentUser.name}` : "🔓 ゲスト";
+    document.getElementById('group-title').innerText = currentGroup.name;
+    document.getElementById('admin-indicator').className = isAdminMode ? "" : "hidden";
+    document.getElementById('user-status-bar').innerText = currentUser ? `👤 ${currentUser.name}` : "🔓 ゲスト閲覧中";
     const grid = document.getElementById('cal-grid'); grid.innerHTML = "";
     for(let i=1; i<=31; i++) {
-        const has = allData.groups[gn].tasks.some(t => t.date.endsWith(String(i).padStart(2,'0')));
+        const has = currentGroup.tasks.some(t => t.date.endsWith(String(i).padStart(2,'0')));
         grid.innerHTML += `<div class="cal-day">${i}${has?'<div style="background:red;width:5px;height:5px;border-radius:50%;margin:auto;"></div>':''}</div>`;
     }
     renderTaskList();
@@ -204,14 +250,11 @@
 
   function renderTaskList() {
     const list = document.getElementById('task-list'); list.innerHTML = "";
-    allData.groups[currentGroup.name].tasks.forEach(t => {
+    currentGroup.tasks.forEach(t => {
       const isD = JSON.parse(localStorage.getItem(`done_${currentUser?.name||'g'}`) || "[]").includes(String(t.id));
       list.innerHTML += `<div class="task ${isD?'done':''}" onclick="toggleDone('${t.id}')"><b>${t.title}</b><br><small>${t.date}</small></div>`;
     });
-    // ゲスト用ボタン
-    if(!currentUser) {
-      list.innerHTML += `<button class="btn-outline" onclick="goToAuth(true)">この団体を自分のアカウントに同期</button>`;
-    }
+    if(!currentUser) list.innerHTML += `<button class="btn-outline" onclick="goToAuth(true)">この団体をアカウントに同期</button>`;
   }
 
   function renderPortal() {
@@ -233,23 +276,6 @@
     if(!document.getElementById('view-portal').classList.contains('hidden')) renderPortal(); else renderCalendar();
   }
 
-  async function groupLoginAction(isOp) {
-    const gn = isOp ? document.getElementById('al-n').value : document.getElementById('login-group-name').value;
-    const gp = isOp ? document.getElementById('al-p').value : document.getElementById('login-group-pass').value;
-    await syncFromCloud();
-    const g = allData.groups[gn];
-    if(g && (isOp ? g.oPass === gp : g.gPass === gp)) {
-      currentGroup = g;
-      if(currentUser && !currentUser.joinedGroups.includes(gn)) {
-        currentUser.joinedGroups.push(gn);
-        if(!g.memberNames) g.memberNames = [];
-        g.memberNames.push(currentUser.name);
-        await syncToCloud();
-      }
-      renderCalendar(); showView('view-calendar');
-    } else alert("認証エラー");
-  }
-
   async function addTask() {
     const t = document.getElementById('t-title').value, d = document.getElementById('t-date').value;
     if(!t || !d) return;
@@ -257,20 +283,35 @@
     allData.groups[currentGroup.name].tasks.push({id: Date.now(), title: t, date: d});
     await syncToCloud(); renderCalendar();
   }
-  
+
+  function goBackFromCalendar() { if(currentUser) { renderPortal(); showView('view-portal'); } else { showView('view-init'); } }
+  function goBackFromUserAuth() { if(syncFlag) { showView('view-calendar'); } else { showView('view-init'); } }
+  function goBackFromGroupLogin() { if(currentUser) { renderPortal(); showView('view-portal'); } else { showView('view-init'); } }
   function openMyPage() {
     const l = document.getElementById('my-groups-list');
     l.innerHTML = (currentUser.joinedGroups || []).map(g => `・ ${g}`).join('<br>');
     showView('view-my-page');
   }
-
+  async function changeMyPassword() {
+    const p = document.getElementById('new-user-pass').value;
+    if(!p) return;
+    await syncFromCloud(); allData.globalUsers[currentUser.name].pass = p; await syncToCloud(); alert("マイPWを更新しました");
+  }
+  async function deleteMyAccount() {
+    if(!confirm("本当にアカウントを削除しますか？")) return;
+    const n = currentUser.name;
+    await syncFromCloud();
+    Object.values(allData.groups).forEach(g => { if(g.memberNames) g.memberNames = g.memberNames.filter(m => m !== n); });
+    delete allData.globalUsers[n];
+    await syncToCloud();
+    location.reload();
+  }
   async function createGroup() {
     const n = document.getElementById('s-n').value;
     await syncFromCloud();
     allData.groups[n] = { name:n, gPass:document.getElementById('s-g').value, oPass:document.getElementById('s-o').value, tasks:[], memberNames:[] };
     await syncToCloud(); showView('view-start');
   }
-
   function showView(id) { document.querySelectorAll('body > div').forEach(v => v.classList.add('hidden')); document.getElementById(id).classList.remove('hidden'); }
   syncFromCloud();
 </script>
